--- a/style.css
+++ b/style.css
@@ -353,3 +353,102 @@ header .action .searchbox input {
 .games .cardbx .card.hide {
     display: none;
 }
+
+
+.tournaments {
+    padding: 0 6.25rem;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.tournaments h2 {
+    color: #fff;
+    margin: 0.8rem 0;
+}
+
+.tournaments .boxBx {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.tournaments .boxBx .box {
+    width: 21.8rem;
+    border-radius: 0.6rem;
+    margin: 1.1rem 2.2rem;
+    background: #1b2141;
+    overflow: hidden;
+}
+
+.tournaments .boxBx .box img {
+    width: 100%;
+    height: 16.5rem;
+    object-fit: cover;
+}
+.tournaments .boxBx .box .content {
+    padding: 0.7rem;
+}
+.tournaments .boxBx .box .content h4 {
+    color: #fff;
+    margin-top: 0.9rem;
+}
+
+.tournaments .boxBx .box .content h4 span {
+    color: #1aeeef;
+}
+
+.tournaments .boxBx .box .content p {
+    text-align: justify;
+    color: #dbd9d9;
+    margin-top: 0.7rem;
+}
+
+.tournaments .boxBx .box .content .btn {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.tournaments .boxBx .box .content .watch {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 20px 0;
+    background: #1aeeef;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 5px;
+    color: #050e2d;
+    letter-spacing: 1px;
+    box-shadow: 0 0 0.7rem #1aeeef;
+}
+.tournaments .boxBx .box .content .watch:hover {
+    border: 0.1rem solid #1aeeef;
+    color: #fff;
+    background: none;
+    box-shadow: none;
+}
+
+.tournaments .boxBx .box .content .join {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 20px 0;
+    border: 1px solid #1aeeef;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 5px;
+    color: #fff;
+    letter-spacing: 1px;
+}
+.tournaments .boxBx .box .content .join:hover {
+    background: #1aeeef;
+    border: none;
+    color: #050e2d;
+    box-shadow: 0 0 10rem #1aeeef;
+}
